# of_pytorch_docker

./: .gitignore  Dockerfile  Dockerfile.abi  Dockerfile.abi_source  Dockerfile.no_abi  README.md  Singularity.def  create_openfoam_container.sh  start_openfoam.sh
test/simpleMLP/: CMakeLists.txt  compileAndRun.sh  simpleMLP.C
test/tensorCreation/: tensorCreation.C
